--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "boxicons": "^2.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.24.0"
+    "react-router-dom": "^6.24.0",
+    "vercel": "^34.2.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
